--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/home-page-styles.css">
-  <script src="./assets/scripts/script.js"></script>
+  
   <title>Spider-Man | Multiversos</title>
+  <!-------CSS------------->
+  <link rel="stylesheet" href="/SpiderMan-Multiverso/assets/css/reset.css">
+  <link rel="stylesheet" href="/SpiderMan-Multiverso/assets/css/global.css">
+  <link rel="stylesheet" href="/SpiderMan-Multiverso/assets/css/home.css">
+  <!-------JS--------------->
+  <script src="/SpiderMan-Multiverso/assets/scripts/script-card-hover-animation.js"></script>
 </head>
 <body>
   <nav class="s-menu">
     <ul>
       <li class="s-menu__item">
-        <a href="/">Página Inicial</a>
+        <a href="#">Pagina Inicial</a>
       </li>
       <li class="s-menu__item">
         <a href="#">Tobey Maguire</a>
       </li>
       <li class="s-menu__item s-menu__icon">
-        <img src="./assets/images/icons/spider.svg" alt="Spider-Man Multiverse">
+        <a href="/SpiderMan-Multiverso/assets/images/icons/spiderman-logo.png" alt="Spider-Man logo"></a>
       </li>
       <li class="s-menu__item">
         <a href="#">Tom Holland</a>
@@ -29,33 +34,31 @@
     </ul>
   </nav>
   <div class="s-container">
-    <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
-      <a href="./pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
-        <h2 class="s-card__title">Tobey Maguire</h2>
-      </a>
-      <a href="./pages/tom-holland/spiderman1.html" class="s-card" id="spider-man-02">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-02.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-02.png" alt="Tom Holland">
-        <h2 class="s-card__title">Tom Holland</h2>
-      </a>
-      <a href="./pages/andrew-garfield/spiderman1.html" class="s-card" id="spider-man-03">
-        <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg">
-        <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
-        <h2 class="s-card__title">Andrew Garfield</h2>
-      </a>
-    </div>
+    <a href="#" class="s-card">
+      <img class="s-card__background" src="/SpiderMan-Multiverso/assets/images/pic-sm-bg-01.jpg" alt="">
+      <img class="s-card__image" src="/SpiderMan-Multiverso/assets/images/spider-man-01.png" alt="Tobey Maguire">
+      <h2 class="s-card__title">Tobey Maguire</h2>
+    </a>
+    <a href="#" class="s-card">
+      <img class="s-card__background" src="/SpiderMan-Multiverso/assets/images/pic-sm-bg-02.jpg" alt="">
+      <img class="s-card__image" src="/SpiderMan-Multiverso/assets/images/spider-man-02.png" alt="Tom Holland">
+      <h2 class="s-card__title">Tom Holland</h2>
+    </a>
+    <a href="#" class="s-card">
+      <img class="s-card__background" src="/SpiderMan-Multiverso/assets/images/pic-sm-bg-03.jpg" alt="">
+      <img class="s-card__image" src="/SpiderMan-Multiverso/assets/images/spider-man-03.png" alt="Andrew Garfield">
+      <h2 class="s-card__title">Andrew Garfield</h2>
+    </a>
   </div>
 
   <div class="s-controller">
-    <div id="1" onclick="selectCarouselItem(this)" class="s-controller__button s-controller__button--active">
+    <div class="s-controller__button">
       01
     </div>
-    <div id="2" onclick="selectCarouselItem(this)" class="s-controller__button">
+    <div class="s-controller__button">
       02
     </div>
-    <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">
+    <div class="s-controller__button">
       03
     </div>
     <div class="s-controller__line"></div>
